--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Productes</title>
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="estil.css">
     <script type="application/javascript" src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="estil.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -31,28 +31,21 @@
             </ul>
         </div>
     </nav>
-    <div class="container-fluid row mt-3">
-        <div class="col-md-4"> 
-            <div class="p-3">
-                <img class="mt-2 border border-primary w-100 m-auto" src="https://vignette.wikia.nocookie.net/juego-detronos-fanon/images/4/46/42tgru65.jpg/revision/latest?cb=20190715005327&path-prefix=es" alt="Card image cap">
-            </div>   
+    <div class="grid-container">
+        <div class="grid-item nosaltres">
+            <a href="sobreNosaltres.html">Sobre Nosaltres</a>
         </div>
-
-        <div class="col-md-8 mt-2 p-5">
-            <h2>Biografia</h2>
-            <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five ce</span>
-            <div class="mt-5">
-                <h2>Activitats</h2>
-                <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five ce</span>
-            </div>
-        </div>  
+        <div class="grid-item productes">
+            <a href="productes.html">Productes</a>
+        </div>
+        <div class="grid-item contacte">
+            <a href="contacte.html">Contacte</a>
+        </div>
     </div>
 
-    <div class="container-fluid justify-content-center w-100">
-        <button class="btn btn-dark mt-2 w-100">Reservar</button>
-    </div>
-    <footer class="footer-container-prodDetallat">
+    <footer class="footer-container">
         <img src="img/dwarf.png" class="imatge-footer">
     </footer>
+      
 </body>
 </html>
