--- a/sobreNosaltres.html
+++ b/sobreNosaltres.html
@@ -9,30 +9,28 @@
     <script type="application/javascript" src="js/bootstrap.min.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <img src="img/dwarf.png" class="img-fluid" style="width: 5%; height: 5%;" alt="dwarf"><a class="navbar-brand"
-                                                                                             href=""></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Sobre Nosaltres</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="contacte.html">Contacte</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="productes.html">Productes</a>
-            </li>
-        </ul>
-    </div>
-</nav>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="nav-link text-white" href="index.html"><h2>Enanitos</h2></a>    
+        <a class="navbar-brand"href=""></a><button class="navbar-toggler mr-3" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse ml-3" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link text-white" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white"  href="sobreNosaltres.html">Sobre Nosaltres</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white"  href="productes.html">Productes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="contacte.html">Contacte</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 <h1 class="titol">Sobre Nosaltres</h1>
 <div class="about-us">
     <div class="text-video">
@@ -57,5 +55,8 @@
                 tabindex="0"></iframe>
     </div>
 </div>
+<footer class="footer-container">
+    <img src="img/dwarf.png" class="imatge-footer">
+</footer>
 </body>
 </html>
